[tool.poetry]
name = "aircon-influx"
version = "0.1.0"
description = ""
authors = ["Rene Cunningham <rene@compounddata.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pychonet = "^2.3.13"
influxdb-client = "^1.36.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
